Fix FAB z-index

--- a/backend/dynamic-web-apps/voting-app/client/src/components/Dashboard.css
+++ b/backend/dynamic-web-apps/voting-app/client/src/components/Dashboard.css
@@ -54,3 +54,6 @@
   font-weight: normal;
   color: #424242;
 }
+.fab {
+  z-index: 10;
+}
